# imap

./: .gitignore  CMakeLists.txt  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  config.ts  main.ts
src-cpp/: CMakeLists.txt  HTTPServer.cpp  HTTPServer.h  WindowApp.cpp  WindowApp.h  main.cpp  utils.hpp
src-cpp/src/: Api.cpp  Api.h  HttpServer.cpp  HttpServer.h  WindowsApp.cpp  main.cpp
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: c_dll.rs  globals.rs  lib.rs  main.rs  static_server.rs
src/assets/: main.css
src/components/: GisMap.vue
src/router/: index.ts
src/views/: HomeView.vue
